# Game

./: .gitignore  README.md
GameClient/: CMakeLists.txt  main.cpp
GameClient/header/: Game.h  Info.h  Paddle.h  Score.h
GameClient/source/: Ball.cpp  Game.cpp  Info.cpp  Score.cpp  main.cpp
GameServer/: CMakeLists.txt  main.cpp
GameServer/header/: Ball.h  Game.h  Info.h  Paddle.h
GameServer/source/: Game.cpp  Info.cpp  Paddle.cpp  Score.cpp  main.cpp
